# pattern_informatics_assignment

./: .gitignore  README.md  pyproject.toml  report.tex
src/pattern_informatics_assignment/: __main__.py  classifier_2d.py  confusion_matrix.py  knn_classifier.py  multinominal_logistic_classifier.py  perceptron_classifier.py  util.py
