[project]
name = "pattern-informatics-assignment"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mitukou1109", email = "mitukou1109@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
